--- a/DDNS/config.json
+++ b/DDNS/config.json
@@ -1,6 +1,6 @@
 {
-    "AccessKeyId": "LTAIt54qUWuBYW8O",
-    "AccessKeySecret": "P5ajC3H5sjFGNb1nNBc2D21lYaGYbj",
+    "AccessKeyId": "LTAIt54qAAAAYW8O",
+    "AccessKeySecret": "P5ajC3H5sjFAAAANBc2D21lYaGYbj",
     "First-level-domain": "dqdata.ml",
     "Second-level-domain": "test"
 }
